refactor!: rename log feature to tracing-log
Previously `quinn*` would provide the `log` feature to log events via `log` if
no `tracing` subscriber exists.

Later https://github.com/quinn-rs/quinn/pull/1923 allowed `quinn-udp` to log via
`log` directly, making `tracing` an optional dependency. For that, it introduced
the `direct-log` feature, a workaround name in order to not introduce a breaking
change.

This commit cleans up the above, renaming the `log` feature to `tracing-log` and
the `direct-log` to `log`. This is a breaking change and thus `quinn-udp` is
bumped to `v0.6.0`.

See https://github.com/quinn-rs/quinn/pull/1921 for the full history.

--- a/quinn-proto/Cargo.toml
+++ b/quinn-proto/Cargo.toml
@@ -14,14 +14,14 @@ workspace = ".."
 all-features = true
 
 [features]
-default = ["rustls", "log"]
+default = ["rustls", "tracing-log"]
 rustls = ["dep:rustls", "ring"]
 ring = ["dep:ring"]
 # Enable rustls ring provider and direct ring usage
 # Provides `ClientConfig::with_platform_verifier()` convenience method
 platform-verifier = ["dep:rustls-platform-verifier"]
 # Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
-log = ["tracing/log"]
+tracing-log = ["tracing/log"]
 
 [dependencies]
 arbitrary = { workspace = true, optional = true }
