--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -95,9 +95,26 @@ jobs:
   test-android:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        target:
+          - aarch64-linux-android
+          - armv7-linux-androideabi
+          - x86_64-linux-android
+          - i686-linux-android
+        include:
+          - target: aarch64-linux-android
+            emulator-arch: arm64-v8a
+          - target: armv7-linux-androideabi
+            emulator-arch: armeabi-v7a
+          - target: x86_64-linux-android
+            emulator-arch: x86_64
+          - target: i686-linux-android
+            emulator-arch: x86
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Install JDK
       uses: actions/setup-java@v3
@@ -120,13 +137,13 @@ jobs:
         toolchain: stable
         override: true
         components: rustfmt, clippy
-        target: x86_64-linux-android
+        target: ${{ matrix.target }}
 
     - name: Install cargo-ndk
       run: cargo install cargo-ndk
 
     - name: Build unit tests for Android
-      run: cargo ndk -t x86_64-linux-android test --no-run
+      run: cargo ndk -t ${{ matrix.target }} test --no-run
 
     - name: Enable KVM group perms
       run: |
@@ -145,7 +162,7 @@ jobs:
 
         any_failures=0
 
-        for test in $(find target/x86_64-linux-android/debug/deps/ -type f -executable -name "*-*"); do
+        for test in $(find target/${{ matrix.target }}/debug/deps/ -type f -executable -name "*-*"); do
           adb push "$test" /data/local/tmp/
           adb shell chmod +x /data/local/tmp/$(basename "$test")
           adb shell /data/local/tmp/$(basename "$test") || any_failures=1
@@ -158,7 +175,7 @@ jobs:
       with:
         api-level: 30
         target: default
-        arch: x86_64
+        arch: ${{ matrix.emulator-arch }}
         profile: Nexus 6
         emulator-options: "-no-window -no-audio"
         avd-name: test
