--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,13 +100,10 @@ jobs:
         include:
           - target: aarch64-linux-android
             emulator-arch: arm64-v8a
-            api-level: 30
           - target: x86_64-linux-android
             emulator-arch: x86_64
-            api-level: 30
           - target: i686-linux-android
             emulator-arch: x86
-            api-level: 30
 
     steps:
     - name: Checkout code
@@ -166,8 +163,8 @@ jobs:
     - name: Set up Android Emulator and run tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        api-level: ${{ matrix.api-level }}
-        target: default
+        api-level: 30
+        target: google_apis
         arch: ${{ matrix.emulator-arch }}
         profile: Nexus 6
         emulator-options: "-no-window -no-audio"
