use macos runner for arm 64

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -93,16 +93,17 @@ jobs:
     - uses: EmbarkStudios/cargo-deny-action@v1
 
   test-android:
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
         include:
           - target: aarch64-linux-android
+            runs-on: macos-latest
             emulator-arch: arm64-v8a
           - target: x86_64-linux-android
+            runs-on: ubuntu-latest
             emulator-arch: x86_64
           - target: i686-linux-android
+            runs-on: ubuntu-latest
             emulator-arch: x86
 
     steps:
@@ -136,6 +137,7 @@ jobs:
       run: cargo ndk -t ${{ matrix.target }} test --no-run
 
     - name: Enable KVM group perms
+      if: runner.os == 'Linux'
       run: |
         echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
         sudo udevadm control --reload-rules
