--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -93,20 +93,15 @@ jobs:
     - uses: EmbarkStudios/cargo-deny-action@v1
 
   test-android:
+    runs-on: ubuntu-latest
+
     strategy:
       matrix:
         include:
-          - target: aarch64-linux-android
-            runs-on: macos-latest
-            emulator-arch: arm64-v8a
           - target: x86_64-linux-android
-            runs-on: ubuntu-latest
             emulator-arch: x86_64
           - target: i686-linux-android
-            runs-on: ubuntu-latest
             emulator-arch: x86
-
-    runs-on: ${{ matrix.runs-on }}
 
     steps:
     - name: Checkout code
@@ -116,7 +111,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
-        java-version: '17' # Install Java 17 to be compatible with the Android SDK command-line tools
+        java-version: '21'
 
     - name: Install Android SDK
       uses: android-actions/setup-android@v2
@@ -139,7 +134,6 @@ jobs:
       run: cargo ndk -t ${{ matrix.target }} test --no-run
 
     - name: Enable KVM group perms
-      if: runner.os == 'Linux'
       run: |
         echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
         sudo udevadm control --reload-rules
