--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -120,12 +120,12 @@ jobs:
       run: sdkmanager --install "ndk;25.2.9519653"
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: stable
-        override: true
-        components: rustfmt, clippy
         target: ${{ matrix.target }}
+
+    - uses: Swatinem/rust-cache@v2
 
     - name: Install cargo-ndk
       run: cargo install cargo-ndk
@@ -142,19 +142,16 @@ jobs:
     - name: Create emulator script
       run: |
         echo '#!/bin/bash
-
         set -e
 
         adb wait-for-device
         while [[ -z "$(adb shell getprop sys.boot_completed | tr -d '\r')" ]]; do sleep 1; done
 
         any_failures=0
-
         for test in $(find target/${{ matrix.target }}/debug/deps/ -type f -executable ! -name "*.so" -name "*-*"); do
           adb push "$test" /data/local/tmp/
           adb shell chmod +x /data/local/tmp/$(basename "$test")
           adb shell /data/local/tmp/$(basename "$test") || any_failures=1
-          echo "any_failures=$any_failures"
         done
 
         exit $any_failures' > run_tests_on_emulator.sh && chmod +x run_tests_on_emulator.sh
@@ -164,5 +161,4 @@ jobs:
       with:
         api-level: 30
         arch: ${{ matrix.emulator-arch }}
-        profile: Nexus 6
         script: ./run_tests_on_emulator.sh
