--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,7 +47,7 @@ jobs:
       run: cargo install cargo-ndk
 
     - name: Build unit tests for Android
-      run: cargo ndk -t ${{ matrix.target }} test --no-run
+      run: CARGO_NDK_ANDROID_TARGET=x86 cargo ndk -t ${{ matrix.target }} test --no-run
 
     - name: Enable KVM group perms
       run: |
