--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,6 @@ name: CI
 
 on:
   push:
-    branches: ['main', '0.8.x']
   pull_request:
   merge_group:
   schedule:
@@ -132,7 +131,7 @@ jobs:
     - uses: Swatinem/rust-cache@v2
 
     - name: Install cargo-ndk
-      run: cargo install cargo-ndk
+      run: cargo install --git https://github.com/bbqsrc/cargo-ndk.git --branch main cargo-ndk
 
     - name: Build unit tests for Android
       run: cargo ndk -t ${{ matrix.target }} test --no-run
