fix(.github): pass matrix.target to rust-android script
When extracting the emulator script into a separate file, the `matrix.target`
substitution wasn't replaced with an environment variable.

Follow-up to https://github.com/quinn-rs/quinn/pull/1950.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -144,6 +144,8 @@ jobs:
         sudo udevadm trigger --name-match=kvm
 
     - name: Set up Android Emulator and run tests
+      env:
+        TARGET: ${{ matrix.target }}
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: ${{ matrix.api-level }}
