--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,7 +51,7 @@ jobs:
       run: cargo install cargo-ndk
 
     - name: Build unit tests for Android
-      run: cargo ndk -t ${{ matrix.target }} -p quinn-udp test --no-run
+      run: cargo ndk -t ${{ matrix.target }} test -p quinn-udp --no-run
 
     - name: Enable KVM group perms
       run: |
