--- a/quinn-udp/Cargo.toml
+++ b/quinn-udp/Cargo.toml
@@ -29,6 +29,9 @@ tracing = { workspace = true, optional = true }
 once_cell = { workspace = true }
 windows-sys = { workspace = true }
 
+[target.'cfg(any(target_os = "macos", target_os = "ios"))'.build-dependencies]
+bindgen = "0.70.1"
+
 [dev-dependencies]
 criterion = "0.5"
 
