--- a/quinn-udp/Cargo.toml
+++ b/quinn-udp/Cargo.toml
@@ -32,6 +32,10 @@ windows-sys = { workspace = true }
 [dev-dependencies]
 criterion = "0.5"
 
+[lib]
+# See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
+bench = false
+
 [[bench]]
 name = "throughput"
 harness = false
