--- a/quinn-udp/Cargo.toml
+++ b/quinn-udp/Cargo.toml
@@ -32,7 +32,9 @@ once_cell = { workspace = true }
 windows-sys = { workspace = true }
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
+# TODO: rework features
+tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "net"] }
 
 [lib]
 # See https://github.com/bheisler/criterion.rs/blob/master/book/src/faq.md#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
