--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,6 @@ name: CI
 
 on:
   push:
-    branches: ['main', '0.8.x']
   pull_request:
   merge_group:
   schedule:
@@ -54,7 +53,8 @@ jobs:
       - run: cargo test
       - run: cargo test --manifest-path fuzz/Cargo.toml
         if: ${{ matrix.rust }} == "stable"
-      - run: cargo test --benches
+      - run: RUST_BACKTRACE=1 cargo test --benches
+        shell: bash
 
   test-aws-lc-rs:
     runs-on: ubuntu-latest
